fixed jumbotron margin spacing

--- a/epic/css/style.css
+++ b/epic/css/style.css
@@ -71,6 +71,10 @@ body{
 	box-shadow: 10px 10px 5px -5px rgba(0,0,0,0.37);
 }
 
+.jumbotron{
+	margin-top: 100px;
+}
+
 .persona {
 	margin: 1% 5% 1% 5%;
 	padding: auto;
